fix: adjust positioning and clipping for envelope sides, update transform for flap text

--- a/src/app/envelope/envelope/envelope.component.css
+++ b/src/app/envelope/envelope/envelope.component.css
@@ -35,7 +35,7 @@
 .right-side,
 .left-side {
   position: absolute;
-  top: 0;
+  top: 2%;
   left: 0;
   width: 100%;
   height: 100%;
@@ -46,11 +46,11 @@
 }
 
 .right-side {
-  clip-path: polygon(50% 50%, 100% 25%, 100% 100%, 50% 100%);
+  clip-path: polygon(49% 50%, 100% 25%, 100% 100%, 49% 100%);
 }
 
 .left-side {
-  clip-path: polygon(0% 25%, 50% 50%, 50% 100%, 0% 100%);
+  clip-path: polygon(0% 25%, 51% 50%, 51% 100%, 0% 100%);
 }
 
 /* ── TOP FLAP ── */
